# softrender

./: Cargo.toml  README.md  rustfmt.toml
.cargo-husky/hooks/: pre-commit
src/: camera.rs  framebuffer.rs  lib.rs  rasterizer.rs  renderer.rs
src/geometry/: mesh.rs  mod.rs  vertex.rs
src/math/: mat4.rs  mod.rs  vec3.rs  vec4.rs
src/render/: framebuffer.rs  mod.rs  rasterizer.rs  screen_vertex.rs  zbuffer.rs
