[package]
name = "softrender"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[lints.rust]
non_snake_case = "deny"
non_camel_case_types = "deny"
non_upper_case_globals = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_must_use = "deny"
# dead_code omitted — wasm-bindgen exports look like dead code to the compiler

[lints.clippy]
# --- Enable the whole group at warn level ---
pedantic = { level = "warn", priority = -1 }

# --- Safety ---
unwrap_used = "deny"          # use expect() or proper error handling instead
expect_used = "warn"          # at least forces a message, but still crashes
panic = "deny"                # no panic!() calls
todo = "deny"                 # no todo!() left in production code
unimplemented = "deny"        # no unimplemented!() left in production code

# --- Style ---
enum_glob_use = "deny"        # no `use MyEnum::*`
wildcard_imports = "deny"     # no `use module::*`
manual_string_new = "deny"    # use `String::new()` not `"".to_string()`
redundant_closure = "deny"    # no `|x| foo(x)`, just use `foo`

# --- Performance ---
inefficient_to_string = "deny"        # avoid unnecessary string clones
large_types_passed_by_value = "warn"  # pass large structs by reference
redundant_clone = "deny"              # remove unnecessary .clone() calls

# --- Correctness ---
cast_lossless = "deny"         # use safe cast methods instead of `as`
cast_possible_truncation = "warn"
integer_division = "warn"      # integer division silently truncates
arithmetic_side_effects = "warn" # potential overflow/underflow
